--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ kramdown:
 include: ['_pages']
 
 # Blog Settings
-paginate: 10
-paginate_path: "/news/page:num/"
+# paginate: 10
+# paginate_path: "/news/page:num/"
 
 # Collections
 collections:
