Further template setups, polishing object styles, added calendar embeds and background image.

--- a/_data/programs.yml
+++ b/_data/programs.yml
@@ -1,20 +1,20 @@
 - name: "Little Dragons"
-  age: "3-5 years"
+  age: "3-5 yrs"
   description: ""
 - name: "Tigers"
-  age: "6-8 years"
+  age: "6-8 yrs"
   description: ""
 - name: "Eagles"
   age: "Advanced level"
   description: ""
 - name: "Tigers"
-  age: "8-12 years"
+  age: "8-12 yrs"
   description: ""
 - name: "Panthers"
-  age: "8-12 years"
+  age: "8-12 yrs"
   description: ""
 - name: "Adults"
-  age: "14+ years"
+  age: "14+ yrs"
   description: ""
 - name: "Kickboxing"
   age: ""
