--- a/_config.yml
+++ b/_config.yml
@@ -36,15 +36,15 @@ collections:
     output: true
     permalink: /gallery/:title/
   staff:
-    output: false
+    output: true
   values:
-    output: false
+    output: true
   menu:
-    output: false
+    output: true
   programs:
-    output: false
+    output: true
   lineage:
-    output: false
+    output: true
 defaults:
   - scope:
       type: "events"
