--- a/_data/programs.yml
+++ b/_data/programs.yml
@@ -1,21 +1,15 @@
-- name: "Little Dragons"
-  age: "3-5 yrs"
-  description: ""
-- name: "Tigers"
-  age: "6-8 yrs"
-  description: ""
-- name: "Eagles"
-  age: "Advanced level"
-  description: ""
-- name: "Tigers"
-  age: "8-12 yrs"
-  description: ""
-- name: "Panthers"
-  age: "8-12 yrs"
-  description: ""
-- name: "Adults"
-  age: "14+ yrs"
-  description: ""
-- name: "Kickboxing"
-  age: ""
-  description: ""
+- name: Little Dragons
+  age: 3-5 yrs
+  description: Little Dragons is about learning how to breathe fire.
+- name: Tigers / Eagles
+  age: 6-8 yrs
+  description:
+- name: Panthers
+  age: 8-12 yrs
+  description:
+- name: Adults
+  age: 14+ yrs
+  description:
+- name: Kickboxing
+  age:
+  description:
