--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ defaults:
       layout: "post"
 
 # Social Media
-# facebook: "https://www.facebook.com/frontrangefirerescue"
+facebook: "https://www.facebook.com/ibba.fc/"
 # instagram: ""
 # youtube: ""
 
