--- a/_config.yml
+++ b/_config.yml
@@ -59,8 +59,8 @@ defaults:
 
 # Social Media
 facebook: "https://www.facebook.com/ibba.fc/"
+youtube: "https://www.youtube.com/channel/UCkcOTCK82WIFTDpETiy1OJQ"
 # instagram: ""
-# youtube: ""
 
 # Google Analytics
 google_analytics_tracking_id: "UA-102590261-1"
