Added customization to front page, fixed a few styling bugs, added lineage page, moved links under about us, styled submenu, added social to page format.

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,13 +1,17 @@
 - text: Programs
   url: /programs/
-- text: Staff
-  url: /staff/
-- text: Our Values
-  url: /values/
+- text: About Us
+  subitems:
+    - text: Our Values
+      url: /values/
+    - text: Staff
+      url: /staff/
+    - text: Lineage
+      url: /lineage/
 - text: Events
   url: /events/
-# - text: Gallery
-#   url: /gallery/
+- text: Gallery
+  url: /gallery/
 - text: FAQ's
   url: /faq/
 - text: Members
