Added attention grabber for overlay with contact form to every page. Also ordered events by date, hiding the past and added date parameter

--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ include: ['_pages']
 # plugins: [jekyll-paginate]
 # paginate: 5
 # paginate_path: "/events/page:num/"
+future: true
 
 # Collections
 collections:
