Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -60,3 +60,7 @@ youtube: "https://www.youtube.com/channel/UCkcOTCK82WIFTDpETiy1OJQ"
 google_analytics_tracking_id: "UA-102590261-1"
 
 exclude: ["vendor","node_modules","package.json","Gemfile","gulpfile.js","*.scss"]
+
+#SEO Plugin
+plugins:
+  - jekyll-seo-tag
