Added JSON-LD, Made some scripts local, improved page titles

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Kaizen IBBA
+title: Kaizen International Black Belt Academy
 email: staff.ftc.ibba@gmail.com
 description: 
 keywords:
