--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "",
-  "version": "0.0.0",
-  "description": "",
+  "name": "Kaizen IBBA",
+  "version": "1.0.0",
+  "description": "Kaizen IBBA",
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,14 +9,16 @@
   "author": "Daniel Jauch",
   "license": "",
   "devDependencies": {
-    "browser-sync": "2.18.12",
-    "gulp": "3.9.1",
-    "gulp-autoprefixer": "4.0.0",
-    "gulp-compass": "2.1.0",
-    "gulp-gzip": "1.4.0",
-    "gulp-clean-css": "3.4.2",
-    "gulp-plumber": "1.1.0",
-    "gulp-sass": "3.1.0",
-    "gulp-uglify": "3.0.0"
+    "gulp": "^3.9.1",
+    "gulp-gzip": "1.4.0"
+  },
+  "dependencies": {
+    "browser-sync": "^2.24.4",
+    "gulp-autoprefixer": "^5.0.0",
+    "gulp-clean-css": "^3.9.4",
+    "gulp-compass": "^2.1.0",
+    "gulp-plumber": "^1.2.0",
+    "gulp-sass": "^4.0.1",
+    "gulp-uglify": "^3.0.0"
   }
 }
